# TimeTable

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  nodemon.json  package-lock.json  package.json  tsconfig.json
public/: index.html  style.css
src/: app.ts  main.rs  redis.ts  store.ts
src/api/: courses.rs  lessons.rs  lessons_ics.rs  main.rs  mod.rs
src/crawlers/: main.rs  mod.rs  store.rs  unicam.rs
src/models/: course.rs  error.rs  lesson.rs  mod.rs
src/public/: index.html
src/redis_helper/: connection_manager.rs
src/routes/: redis.ts  timetable.ts
src/types/: Course.d.ts  Errors.ts  Lesson.d.ts  University.ts
src/universities/: UNICAM.ts
src/utilities/: adminAuth.ts  capitalize.ts  parseDate.ts
