[package]
name = "timetable"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
regex = "1.10.5"
chrono = { version = "0.4" }
actix-web = "4.0"
dotenv = "0.15.0"
async-trait = "0.1.88"
env_logger = "0.11.8"
log = "0.4.27"
redis = "0.32.4"
once_cell = "1.21.3"
md5 = "0.8.0"
